ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mygoapp.info
      http:
        paths:
        - path: /hello
          pathType: Prefix
          backend:
            service:
              name: serve-service
              port:
                number: 8080
